
v 1.0.9

    QUIQQER

    - Image Optimierung
    - Übersetzung
    - VHosts -> Templates werden richtig gespeichert

    Development

    - Fix : Grid Toggle Icon öffnet den Renderer
    - Packet Manager überarbeitet -> geht über die composer.json
    - Media Button beachtet das aktuelle Projekt

v 1.0.8

    QUIQQER

    - Benutzer / Gruppen Verwaltung überarbeitet
    - Permissions / Rechte überarbeitet -> Falsches handhaben von Projektrechten behoben
    - Jede Menge XML API Fixes (user.xml, settings.xml -> standards überarbeitet)
    - Projekte können gelöscht werden
    - Mediabereiche -> Dateien umbenennen -> Cache Problem behoben
    - Neue Sortierung der Unterseiten möglich -> Nach veröffentlichungsdatum
    - Jedes Plugin auf dem Updateserver besitzt eine md5 hash Datei (checklist.md5)

    Development

    - Grid Control um Methode erweitert -> getButtons()
    - Control parsing -> Calendar fix
    - Mail -> namespaces
    - html2text in die mail klasse
    - User und Nobody besitzen nun einen getCountry
    - User -> set extras raus, wird nicht mehr gebraucht; user xml prüft auf extra attribute
    - grid edit fix
    - event : onUserLogin
    - site panels über die site.xml erweiter -> neue tabs
    - Neue Konstante: URL_TEMPLATE_DIR in Smarty
    - URL Rewrite fix für die Startseite
    - Controls -> media input im sitepanel, richtiges projekt gesetzt
    - projects settings -> extra settings ... Projekte können nun über die settings.xml erweiterte Einstellungen bekommen

    Bugs

    #4820 - .ini Dateien im etc als php Dateien (Security)
    #5164 - Edit History
    #6277 - UpdateServer: File Map mit Hashes generienren bei erstellugn einer neuer Version
    #21513 - Sprachverknüpfungen nur anzeigen wenn es mehrere Sprachen gibt
    #21507 - WYSIWYG - Projekte CSS XML

v 1.0.7

    QUIQQER

    - Willkommens Panel
    - Benutzer Sessions können über die Datenbank oder das Filesystem laufen
    - Doppelte Projektsprachen werden verhindert
